# Krak3D

./: CMakeLists.txt  Makefile  README.md  main  main.cpp  toolchain.cmake
resources/shaders/: SimpleVertexShader.vxs
source/: main.cpp
source/shaders/: load.cpp
